Add Dockerfile for frontend

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 [submodule "task-a1/todo-frontend"]
 	path = task-a1/todo-frontend
 	url = git@github.com:ianyong/todo-frontend.git
-	branch = master
+	branch = ian/add-dynamic-environment-variables
