--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "task-a1/todo-backend"]
 	path = task-a1/todo-backend
 	url = git@github.com:ianyong/todo-backend.git
-	branch = master
+	branch = ian/add-build-command-for-db-utils
 [submodule "task-a1/todo-frontend"]
 	path = task-a1/todo-frontend
 	url = git@github.com:ianyong/todo-frontend.git
