--- a/task-a1/.env.template
+++ b/task-a1/.env.template
@@ -7,4 +7,4 @@ DB_NAME=todo_production
 DB_USER=
 DB_PASSWORD=
 
-BASE_SERVER_URL=http://localhost:8000/api/v1
+BASE_SERVER_URL=http://localhost/api/v1
