--- a/task-a3/frontend-deployment-updated.yml
+++ b/task-a3/frontend-deployment-updated.yml
@@ -19,3 +19,8 @@ spec:
         env:
         - name: BASE_SERVER_URL
           value: http://todo.cs3219.com/api/v1
+        resources:
+          limits:
+            cpu: 50m
+          requests:
+            cpu: 20m
